# gqrx-scanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake  cmake_uninstall.cmake.in  gqrx-prot.c  gqrx-prot.h  gqrx-scan.c
.github/workflows/: ci.yml
tests/: CMakeLists.txt  all_tests.c  test_file_ops.c  test_utils.c
tests/fixtures/: test_bookmarks.csv
tests/mocks/: mock_socket.c  mock_socket.h
